--- a/promass-backend/package.json
+++ b/promass-backend/package.json
@@ -11,11 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mssql": "^10.0.2"
+    "cors": "2.8.5",
+    "express": "4.18.2",
+    "mssql": "10.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "3.1.0"
   }
 }
